# lockie---cpp-password-manager

./: CMakeLists.txt  README.md
src/: crypto.cpp  crypto.h  details.h  main  main.cpp  passfunctions.cpp  passfunctions.h
